pa10/tests/type_error/call_arg_count.uC
int foo(int x, int y);

int main() {
	int a;
	a = 1;
	a = foo(a);
	return 0;
}

int foo(int x, int y) {
	return x + y;
}
